--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,11 @@ name = "kimchi"
 version = "0.1.0"
 authors = ["Warren Galyen <wgalyen@bellhelmets.com>"]
 edition = "2018"
+description = "A spicy link checker"
+homepage = "https://github.com/wgalyen/kimchi"
+repository = "https://github.com/wgalyen/kimchi"
+documentation = ""
+license = "Apache-2.0/MIT"
 
 [dependencies]
 github-rs = "0.7.0"
