--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,9 +10,16 @@ documentation = ""
 license = "Apache-2.0/MIT"
 
 [dependencies]
+dotenv = "0.15.0"
 github-rs = "0.7.0"
-serde_json = "1.0.56"
-regex = "1.3.9"
-reqwest = { version = "0.10", features = ["blocking"] }
-pulldown-cmark = "0.7.2"
 pico-args = "0.3.3"
+pulldown-cmark = "0.7.2"
+regex = "1.3.9"
+serde_json = "1.0.56"
+url = "2.1.1"
+log = "0.4"
+pretty_env_logger = "0.4"
+
+[dependencies.reqwest]
+version = "0.10.7"
+features = ["blocking", "gzip"]
