--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ license = "Apache-2.0/MIT"
 [dependencies]
 any = "*"
 anyhow = "*"
-dotenv = "0.15.0"
+futures = "0.3"
 github-rs = "0.7.0"
 linkify = "*"
 url = "2.1.1"
@@ -24,5 +24,9 @@ regex = "1.3.9"
 serde_json = "1.0.56"
 
 [dependencies.reqwest]
-features = ["blocking", "gzip"]
-version = "0.10.7"
+features = ["gzip"]
+version = "0.10"
+
+[dependencies.tokio]
+features = ["full"]
+version = "0.2"
