--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,10 +14,10 @@ any = "*"
 anyhow = "*"
 futures = "0.3"
 github-rs = "0.7.0"
+gumdrop = "*"
 linkify = "*"
 url = "2.1.1"
 log = "0.4"
-pico-args = "0.3.3"
 pretty_env_logger = "0.4"
 pulldown-cmark = "0.7.2"
 regex = "1.3.9"
