--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,7 +20,7 @@ url = "2.1.1"
 log = "0.4"
 pretty_env_logger = "0.4"
 pulldown-cmark = "0.7.2"
-regex = "1.3.9"
+regex = "*"
 serde_json = "1.0.56"
 
 [dependencies.reqwest]
