--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,18 +10,17 @@ documentation = ""
 license = "Apache-2.0/MIT"
 
 [dependencies]
-any = "*"
-anyhow = "*"
+anyhow = "1.0.32"
 futures = "0.3"
 github-rs = "0.7.0"
-gumdrop = "*"
-http = "*"
-linkify = "*"
+gumdrop = "0.8.0"
+http = "0.1.21"
+linkify = "0.4.0"
 url = "2.1.1"
 log = "0.4"
 pretty_env_logger = "0.4"
 pulldown-cmark = "0.7.2"
-regex = "*"
+regex = "1.3.9"
 serde_json = "1.0.56"
 
 [dependencies.reqwest]
