Add globbing support

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ license = "Apache-2.0/MIT"
 anyhow = "1.0.32"
 futures = "0.3"
 github-rs = "0.7.0"
+glob = "0.3.0"
 gumdrop = "0.8.0"
 http = "0.1.21"
 linkify = "0.4.0"
