--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,10 +12,10 @@ license = "Apache-2.0/MIT"
 [dependencies]
 anyhow = "1.0.32"
 futures = "0.3"
-github-rs = "0.7.0"
 glob = "0.3.0"
 gumdrop = "0.8.0"
-http = "0.1.21"
+http = "0.2"
+hubcaps = "0.6"
 linkify = "0.4.0"
 url = "2.1.1"
 log = "0.4"
