Fix Linux deployment workflow Add install openssl step

--- a/.github/workflows/deploys.yaml
+++ b/.github/workflows/deploys.yaml
@@ -145,7 +145,7 @@ jobs:
           # - powerpc64le-unknown-linux-gnu
           # - s390x-unknown-linux-gnu
           - x86_64-unknown-linux-gnu
-          - x86_64-unknown-linux-musl
+          # - x86_64-unknown-linux-musl
           # Android
           # - aarch64-linux-android
           # - arm-linux-androideabi
@@ -175,6 +175,7 @@ jobs:
           path: /tmp/
       - run: chmod +x /tmp/cross
 
+      - run: sudo apt-get update && sudo apt-get install --no-install-recommends openssl
       - run: bash ci/set_rust_version.bash stable ${{ matrix.target }}
       - run: bash ci/build.bash /tmp/cross ${{ matrix.target }} RELEASE
       - run: tar -czvf ${{ env.BIN }}.tar.gz --directory=target/${{ matrix.target }}/release ${{ env.BIN }}
