--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ license = "Apache-2.0/MIT"
 [dependencies]
 anyhow = "1.0.32"
 futures = "0.3"
-glob = "0.3.0"
+glob = "0.3"
 gumdrop = "0.8.0"
 http = "0.2"
 hubcaps = "0.6"
@@ -29,3 +29,6 @@ version = "0.10"
 [dependencies.tokio]
 features = ["full"]
 version = "0.2"
+
+[dev-dependencies]
+wiremock = "0.4.7"
