--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ pretty_env_logger = "0.4"
 regex = "1.3.9"
 url = "2.1.1"
 check-if-email-exists = "0.8.13"
+indicatif = "0.15.0"
 
 [dependencies.reqwest]
 features = ["gzip"]
