--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,8 @@ serde = { version = "1.0", features = ["derive"] }
 pulldown-cmark = "0.8.0"
 quick-xml = "0.20.0"
 headers = "0.3.2"
+derive_builder = "0.9.0"
+deadpool = "0.6.0"
 
 [dependencies.reqwest]
 features = ["gzip"]
