--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,13 @@ authors = ["Warren Galyen <wgalyen@bellhelmets.com>"]
 edition = "2018"
 description = "A spicy link checker"
 homepage = "https://github.com/wgalyen/kimchi"
+keywords = [
+    "link",
+    "checker",
+    "cli",
+    "link-checker",
+    "validator",
+]
 repository = "https://github.com/wgalyen/kimchi"
 documentation = ""
 license = "Apache-2.0/MIT"
@@ -16,8 +23,6 @@ glob = "0.3"
 http = "0.2"
 hubcaps = "0.6.2"
 linkify = "0.4.0"
-log = "0.4"
-pretty_env_logger = "0.4"
 regex = "1.4.3"
 url = "2.2.0"
 check-if-email-exists = "0.8.19"
@@ -32,6 +37,7 @@ derive_builder = "0.9.0"
 deadpool = "0.6.0"
 shellexpand = "2.0"
 lazy_static = "1.1"
+wiremock = "0.3.0"
 
 [dependencies.reqwest]
 features = ["gzip"]
@@ -42,7 +48,6 @@ features = ["full"]
 version = "0.2"
 
 [dev-dependencies]
-wiremock = "0.3"
 assert_cmd = "1.0.2"
 predicates = "1.0"
 uuid = { version = "0.8", features = ["v4"] }
