Add (machine-readable) output file support For now I'm only supporting JSON. I honestly don't know if it makes sense to include other formats. For example, MD and HTML are not really machine-readable. YAML is not a great standard format for this use-case.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,6 +39,7 @@ shellexpand = "2.0"
 lazy_static = "1.1"
 wiremock = "0.3.0"
 openssl-sys = "0.9.58" 
+serde_json = "1.0.60"
 
 [dependencies.reqwest]
 features = ["gzip"]
